fix scroll indicator regression & more consistent spacing

--- a/Oscillate Theme/Oscillate.css
+++ b/Oscillate Theme/Oscillate.css
@@ -1,5 +1,5 @@
 /*
-Oscillate v0.8.0
+Oscillate v0.8.1
 by Valerio Lyndon
 a Genshin Impact design
 */
@@ -50,6 +50,10 @@ body {
 a,
 table#mal_control_strip a {
 	text-decoration: none;
+}
+
+#list_surround br {
+	display: none;
 }
 
 /* Cover Banner */
@@ -532,7 +536,7 @@ td#mal_cs_powered {
 div:not(.hide) > table:not([class]):first-of-type {
 	width: max-content;
 	padding: 10px 25px;
-	margin: 0 auto;
+	margin: 0 auto 30px;
 	display: block;
 	--s: 15px;
 	clip-path: polygon(0% var(--s), var(--s) 0, calc(100% - var(--s)) 0px, 100% var(--s), 100% calc(100% - var(--s)), calc(100% - var(--s)) 100%, var(--s) 100%, 0% calc(100% - var(--s)));
@@ -631,11 +635,12 @@ table:not(:hover) [class^="status_"]:nth-of-type(n+4):not(:hover)::after,
 
 /* Scroll Indicator for visitors */
 
-[data-owner=""] div:not(.hide) > table:not([class]):first-of-type tbody::after {
+[data-owner=""] #list_surround::before {
 	content: "";
 	position: absolute;
+	z-index: 1;
 	left: calc(50% - 15px);
-	top: 200%;
+	top: calc(100vh - 250px + 120px);
 	width: 30px;
 	height: 30px;
 	border: 4px solid white;
